sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: value unary_! is not a member of Unit
    if (!(plusPetit(i,i+1)) && !(i=0)) {
                               ^